# simcse-for-multilabel-text

./: .gitignore  README.md  pyproject.toml
bert/: utils.py
bert/collates/: eval.py  scl.py  sup_label.py  unsup.py
bert/metrics/: knn.py
bert/models/: dscl.py  jscl.py  scl.py  sscl.py  unsup.py
classification/: emb.py
classification/experiments/: run_dscl.py  run_jscl.py  run_scl.py  run_sscl.py  run_unsup.py
experiments/: run_dscl.py  run_jscl.py  run_scl.py  run_sscl.py  run_unsup.py
ll2vec/experiments/: run_unsup.py
model_configs/: princeton.py
train_configs/: dscl.py  jscl.py  scl.py  sscl.py  unsup.py
